[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "burr"
version = "0.2.0"
dependencies = [
    "sf-hamilton>=1.47.0"
]
requires-python = ">=3.9"
authors = [
  {name = "Elijah ben Izzy", email = "elijah@dagworks.io"},
  {name = "Stefan Krawczyk", email = "stefan@dagworks.io"},
]
maintainers = [
  {name = "Elijah ben Izzy", email = "elijah@dagworks.io"},
  {name = "Stefan Krawczyk", email = "stefan@dagworks.io"},
]
description = "A state machine for data projects"
readme = "README.md"
#license = {file = "LICENSE.txt"}
keywords = ["mlops", "data", "state-machine", "llmops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
streamlit = [
  "streamlit",
  "graphviz",
  "matplotlib"
]

graphviz = [
  "graphviz"
]

tests = [
  "pytest",
  "pytest-asyncio",
]

documentation = [
  "sphinx",
  "sphinx-autobuild",
  "myst-parser",
  "furo",
  "sphinx-sitemap",
  "sphinx-toolbox"
]

tracking-client = [
  "pydantic"
]

tracking-server = [
  "click",
  "fastapi",
  "uvicorn",
  "pydantic",
  "fastapi-pagination",
  "aiofiles",
  "requests",
  "jinja2",
]

tracking = [
  "burr[tracking-client]",
  "burr[tracking-server]",
  "loguru",
]

# just install everything for developers
developer = [
  "burr[streamlit]",
  "burr[graphviz]",
  "burr[tracking]",
  "burr[tests]",
  "burr[documentation]",
  "loguru", # I love loguru TBH, but not for any prod stuff
  "build",
  "twine",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["burr", "burr.*"]

# we need to ensure this is there...
[tool.setuptools.package-data]
burr = [
  "burr/tracking/server/build/**/*",
]

[project.urls]
Homepage = "https://github.com/dagworks-inc/burr"
Documentation = "https://github.com/dagworks-inc/burr"
Repository = "https://github.com/dagworks-inc/burr"
"Bug Tracker" = "https://github.com/dagworks-inc/burr"

[project.scripts]
server = "burr.cli.__main__:cli_run_server"
publish = "burr.cli.__main__:cli_build_and_publish"
build-ui = "burr.cli.__main__:cli_build_ui"
