[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "burr"
version = "0.7.0"
dependencies = [
    "sf-hamilton>=1.47.0"
]
requires-python = ">=3.9"
authors = [
  {name = "Elijah ben Izzy", email = "elijah@dagworks.io"},
  {name = "Stefan Krawczyk", email = "stefan@dagworks.io"},
]
maintainers = [
  {name = "Elijah ben Izzy", email = "elijah@dagworks.io"},
  {name = "Stefan Krawczyk", email = "stefan@dagworks.io"},
]
description = "A state machine for data projects"
readme = "README.md"
#license = {file = "LICENSE.txt"}
keywords = ["mlops", "data", "state-machine", "llmops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
streamlit = [
  "streamlit",
  "graphviz",
  "matplotlib"
]

graphviz = [
  "graphviz"
]

tests = [
  "pytest",
  "pytest-asyncio",
]

documentation = [
  "sphinx",
  "sphinx-autobuild",
  "myst-parser",
  "furo",
  "sphinx-sitemap",
  "sphinx-toolbox"
]

tracking-client = [
  "pydantic"
]

tracking-server = [
  "click",
  "fastapi",
  "uvicorn",
  "pydantic",
  "fastapi-pagination",
  "aiofiles",
  "requests",
  "jinja2",
  "openai", # temporary for the demo, we will likely remove
]

tracking = [
  "burr[tracking-client]",
  "burr[tracking-server]",
  "loguru",
]

learn = [
  "burr[tracking,streamlit,graphviz]"
]

start = [
  "burr[learn]"
]

# just install everything for developers
developer = [
  "burr[streamlit]",
  "burr[graphviz]",
  "burr[tracking]",
  "burr[tests]",
  "burr[documentation]",
  "build",
  "twine",
  "pre-commit",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["burr", "burr.*"]

# we need to ensure this is there...
[tool.setuptools.package-data]
burr = [
  "burr/tracking/server/build/**/*",
  "burr/tracking/server/demo_data/**/*"
]

[project.urls]
Homepage = "https://github.com/dagworks-inc/burr"
Documentation = "https://github.com/dagworks-inc/burr"
Repository = "https://github.com/dagworks-inc/burr"
"Bug Tracker" = "https://github.com/dagworks-inc/burr"

[project.scripts]
burr = "burr.cli.__main__:cli_run_server"
burr-admin-server = "burr.cli.__main__:cli_run_server"
burr-admin-publish = "burr.cli.__main__:cli_build_and_publish"
burr-admin-build-ui = "burr.cli.__main__:cli_build_ui"
burr-admin-generate-demo-data = "burr.cli.__main__:cli_generate_demo_data"
